MSSQLServerDeployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mssql-deployment-jrt
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mssql-jrt
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql-jrt
        image: mcr.microsoft.com/mssql/server:2017-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb-jrt
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb-jrt
        persistentVolumeClaim:
          claimName: mssql-data-jrt
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-server2017-jrt
spec:
  selector:
    app: mssql-jrt
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
