mssqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-server2017-jrt
spec:
  ports:
  - port: 1433
    targetPort: 1433
  selector:
    purpose: demonstrate-sqlserver
